rbx_xml/tests/snapshots/test_files__body_movers.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: BodyAngularVelocity
  class: BodyAngularVelocity
  properties:
    AngularVelocity:
      Vector3:
        - 0.0
        - 2.0
        - 0.0
    AttributesSerialize:
      BinaryString: ""
    MaxTorque:
      Vector3:
        - 4000.0
        - 4000.0
        - 4000.0
    P:
      Float32: 1250.0
    Tags:
      Tags:
        - ""
  children: []
- referent: referent-1
  name: BodyForce
  class: BodyForce
  properties:
    AttributesSerialize:
      BinaryString: ""
    Force:
      Vector3:
        - 0.0
        - 1.0
        - 0.0
    Tags:
      Tags:
        - ""
  children: []
- referent: referent-2
  name: BodyGyro
  class: BodyGyro
  properties:
    AttributesSerialize:
      BinaryString: ""
    CFrame:
      CFrame:
        position:
          - 0.0
          - 0.0
          - 0.0
        orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    D:
      Float32: 500.0
    MaxTorque:
      Vector3:
        - 400000.0
        - 0.0
        - 400000.0
    P:
      Float32: 3000.0
    Tags:
      Tags:
        - ""
  children: []
- referent: referent-3
  name: BodyPosition
  class: BodyPosition
  properties:
    AttributesSerialize:
      BinaryString: ""
    D:
      Float32: 1250.0
    MaxForce:
      Vector3:
        - 4000.0
        - 4000.0
        - 4000.0
    P:
      Float32: 10000.0
    Position:
      Vector3:
        - 0.0
        - 50.0
        - 0.0
    Tags:
      Tags:
        - ""
  children: []
- referent: referent-4
  name: BodyThrust
  class: BodyThrust
  properties:
    AttributesSerialize:
      BinaryString: ""
    Force:
      Vector3:
        - 0.0
        - 1.0
        - 0.0
    Location:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
    Tags:
      Tags:
        - ""
  children: []
- referent: referent-5
  name: BodyVelocity
  class: BodyVelocity
  properties:
    AttributesSerialize:
      BinaryString: ""
    MaxForce:
      Vector3:
        - 4000.0
        - 4000.0
        - 4000.0
    P:
      Float32: 1250.0
    Tags:
      Tags:
        - ""
    Velocity:
      Vector3:
        - 0.0
        - 2.0
        - 0.0
  children: []

