rbx_xml/tests/snapshots/test_files__default_inserted_folder.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      Tags:
        - ""
  children: []

