rbx_xml/tests/snapshots/test_files__default_inserted_part.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: Part
  class: Part
  properties:
    Anchored:
      Bool: false
    AttributesSerialize:
      BinaryString: ""
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        position:
          - -14.0
          - 15.5
          - -7.0
        orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 163
        - 162
        - 165
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FormFactor:
      Enum: 1
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    Reflectance:
      Float32: 0.0
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
    Shape:
      Enum: 1
    Size:
      Vector3:
        - 4.0
        - 1.0
        - 2.0
    Tags:
      Tags:
        - ""
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0.0
    Velocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
  children: []

