rbx_xml/tests/snapshots/test_files__ref_child.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: Value
  class: ObjectValue
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      Tags:
        - ""
    Value: referent-1
  children:
    - referent: referent-1
      name: Ref Target
      class: Folder
      properties:
        AttributesSerialize:
          BinaryString: ""
        Tags:
          Tags:
            - ""
      children: []

